# comp195-spr19

./: .gitignore  README.md
data_analytics/: main.py
docs/reqs/: group_requirements_analysis.tex  mybib.bib  requirements_analysis.tex
docs/reqs/uml/: open_editor.uml  use_case_diagram.uml
src/: CMakeLists.txt  Comp195Config.h  Comp195Config.h.in  main.c
